file logic change for bat files

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -1,4 +1,6 @@
 [General]
 close_on_launch = False
 default_browser = C:/Users/tifte/AppData/Local/Programs/Opera GX/opera.exe
+vbs4_path = C:/BISIM/VBS4/VBS4.exe
+blueig_path = C:/BISIM/VBS4/VBS4.exe
 
