Blue IG FINALLY WORKS

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -2,5 +2,5 @@
 close_on_launch = False
 default_browser = C:/Users/tifte/AppData/Local/Programs/Opera GX/opera.exe
 vbs4_path = C:/BISIM/VBS4/VBS4.exe
-blueig_path = C:/BISIM/VBS4/VBS4.exe
+blueig_path = C:/Builds/BlueIG/Blue IG 24.2 YYMEA_General/BlueIg.exe
 
