Config ini fixes

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -3,5 +3,10 @@ close_on_launch = False
 default_browser = C:/Users/tifte/AppData/Local/Programs/Opera GX/opera.exe
 vbs4_path = C:/BISIM/VBS4/VBS4.exe
 blueig_path = C:/BISIM/VBS4/VBS4.exe
+#C:/Builds/BlueIG/BlueIG 24.2 YYMEA_General/BlueIG.exe
 bvi_manager_path = C:/Program Files/ARES/ARES-dev-release-v0.9.4-c1d3950/ares.manager/ares.manager.exe
 
+[Auto-Launch]
+enabled = True
+program_path = C:/Users/tifte/Desktop/Auto-Launch.lnk
+arguments = ""
