--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -1,8 +1,8 @@
 [General]
-close_on_launch = False
+close_on_launch = True
 default_browser = C:/Users/tifte/AppData/Local/Programs/Opera GX/opera.exe
 vbs4_path = C:/BISIM/VBS4/VBS4.exe
-blueig_path = C:/BISIM/VBS4/VBS4.exe
+blueig_path = C:/BISIM/VBS4/VBSLauncher.exe
 bvi_manager_path = C:/Program Files/ARES/ARES-dev-release-v0.9.4-c1d3950/ares.manager/ares.manager.exe
 
 [Auto-Launch]
