Blueig launch logic change

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -2,7 +2,7 @@
 close_on_launch = True
 default_browser = C:/Users/tifte/AppData/Local/Programs/Opera GX/opera.exe
 vbs4_path = C:/BISIM/VBS4/VBS4.exe
-blueig_path = C:/BISIM/VBS4/VBSLauncher.exe
+blueig_path = C:\Builds\BlueIG\BlueIG 24.1 YYMEA_General\BlueIG.exe
 bvi_manager_path = C:/Program Files/ARES/ARES-dev-release-v0.9.4-c1d3950/ares.manager/ares.manager.exe
 vbs4_setup_path = C:/BISIM/VBS4/VBSLauncher.exe
 
