full screen added

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -9,6 +9,7 @@ vbs_license_manager_path = C:\Program Files\Bohemia Interactive Simulations\VBS 
 vbs_map_user = TIFTE
 vbs_map_server = localhost
 vbs_map_port = 4080
+fullscreen = True
 
 [Auto-Launch]
 enabled = True
