--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -1,18 +1,18 @@
 [General]
-close_on_launch = True
-default_browser =
-vbs4_path =
-blueig_path =
-bvi_manager_path =
-vbs4_setup_path =
-vbs_license_manager_path =
-vbs_map_user =
+close_on_launch = False
+default_browser = 
+vbs4_path = C:\Builds\VBS4\VBS4 25.1 YYMEA_General\VBS4.exe
+blueig_path = C:\Builds\BlueIG\Blue IG 24.2 YYMEA_General\BlueIG.exe
+bvi_manager_path = 
+vbs4_setup_path = 
+vbs_license_manager_path = 
+vbs_map_user = 
 vbs_map_server = localhost
 vbs_map_port = 4080
 fullscreen = False
 
 [Auto-Launch]
 enabled = False
-program_path =
-arguments =
+program_path = 
+arguments = 
 
