Improve executable auto-detection

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -1,11 +1,11 @@
 [General]
 close_on_launch = True
-default_browser = C:/Users/tifte/AppData/Local/Programs/Opera GX/opera.exe
-vbs4_path = C:/Builds/VBS4/VBS4 YYMEA_General/VBS4.exe
-blueig_path = C:/Builds/BlueIG/Blue IG 24.2 YYMEA_General/BlueIG.exe
-bvi_manager_path = C:/Program Files/ARES/ARES-dev-release-v0.9.4-c1d3950/ares.manager/ares.manager.exe
-vbs4_setup_path = C:/Builds/VBS4/VBS4 YYMEA_General/VBSLauncher.exe
-vbs_license_manager_path = C:/Program Files/Bohemia Interactive Simulations/VBS License Manager/VBSLicenseManager.exe
+default_browser =
+vbs4_path =
+blueig_path =
+bvi_manager_path =
+vbs4_setup_path =
+vbs_license_manager_path =
 vbs_map_user = TIFTE
 vbs_map_server = localhost
 vbs_map_port = 4080
@@ -13,6 +13,6 @@ fullscreen = True
 
 [Auto-Launch]
 enabled = True
-program_path = C:/Users/tifte/Desktop/Auto-Launch.lnk
+program_path =
 arguments = ""
 
