Add external fuser configuration

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -16,3 +16,8 @@ enabled = True
 program_path = C:/Users/tifte/Desktop/Auto-Launch.lnk
 arguments = ""
 
+
+[Fusers]
+config_path = fuser_config.json
+local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\Fuser.exe
+remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh Fuser\\PhotoMeshFuser.exe
