Update fuser launch to support batch files

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -18,6 +18,6 @@ arguments = ""
 
 [Fusers]
 config_path = fuser_config.json
-local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\Fuser.exe
-remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh Fuser\\PhotoMeshFuser.exe
+local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
+remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 
