Make fuser discovery generic

--- a/PythonPorjects/fuser_config.json
+++ b/PythonPorjects/fuser_config.json
@@ -1,16 +1,8 @@
 {
+  "shared_path": "\\\\SERVER\\SharedMeshDrive\\WorkingFuser",
   "fusers": {
-    "192.168.1.100": [
-      {
-        "name": "RyanFuser1",
-        "shared_path": "\\\\RyansWorkPC2\\SharedMeshDrive\\WorkingFuser"
-      }
-    ],
     "localhost": [
-      {
-        "name": "LocalFuser",
-        "shared_path": "\\\\localhost\\SharedMeshDrive\\WorkingFuser"
-      }
+      {"name": "LocalFuser"}
     ]
   }
 }
