Add fuser mode option

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -20,4 +20,5 @@ arguments = ""
 config_path = fuser_config.json
 local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
+fuser_computer = False
 
