Fix local fuser UNC path

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -20,4 +20,6 @@ arguments = ""
 config_path = fuser_config.json
 local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
+fuser_computer = False
+local_fuser_bat = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\start_fusers.bat
 
