--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -20,6 +20,6 @@ arguments = ""
 config_path = fuser_config.json
 local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
-fuser_computer = False
-working_folder_host = 
+fuser_computer = True
+working_folder_host = HAMMERKIT1-4
 
