fuser update to real time

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -21,5 +21,5 @@ config_path = fuser_config.json
 local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 fuser_computer = False
-working_folder_host = HAMMERKIT1-4
+working_folder_host = 
 
