--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -21,7 +21,7 @@ config_path = fuser_config.json
 local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 fuser_computer = False
-working_folder_host = 
+working_folder_host = HAMMERKIT1-4
 
 [BiSimOneClickPath]
 path = C:\BiSim OneClick\Datasets\project_20250724_134403
