--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -24,5 +24,5 @@ fuser_computer = False
 working_folder_host = HAMMERKIT1-4
 
 [BiSimOneClickPath]
-path = C:\BiSim OneClick\Datasets\project_20250724_134403
+path = C:\BiSim OneClick\Datasets\CACTF_BUILD_20250811_153843
 
