--- a/PythonPorjects/fuser_config.json
+++ b/PythonPorjects/fuser_config.json
@@ -1,5 +1,5 @@
 {
-  "shared_path": "\\\\HAMMERKIT1-4\\SharedMeshDrive\\WorkingFuser",
+  "shared_path": "\\\\Kit1-1\\SharedMeshDrive\\WorkingFuser",
   "fusers": {
     "localhost": [
       {
