--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -28,9 +28,9 @@ working_folder_host = Kit1-1
 path = C:\BiSim OneClick\Datasets\CACTF_BUILD_20250814_134554
 
 [Offline]
-enabled = True
-host_name = 
-host_ip = 
+enabled = False
+host_name = KIT-HOST
+host_ip = 192.168.50.10
 share_name = SharedMeshDrive
 local_data_root = D:\SharedMeshDrive
 working_fuser_subdir = WorkingFuser
