Revert "Add offline mode toggle with local PhotoMesh support"
This reverts commit 3dc78755903af04489cea233f23c557d4d7273df.

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -28,9 +28,9 @@ working_folder_host = SharedMeshDrive
 path = C:\BiSim OneClick\Datasets\CACTF_BUILD_20250814_134554
 
 [Offline]
-enabled = False
-host_name = KIT-HOST
-host_ip = 192.168.50.10
+enabled = True
+host_name = 
+host_ip = 
 share_name = SharedMeshDrive
 local_data_root = D:\SharedMeshDrive
 working_fuser_subdir = WorkingFuser
