--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -22,14 +22,14 @@ config_path = fuser_config.json
 local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 fuser_computer = False
-working_folder_host = KIT1-1
+working_folder_host = SharedMeshDrive
 
 [BiSimOneClickPath]
 path = C:\BiSim OneClick\Datasets\CACTF_BUILD_20250814_134554
 
 [Offline]
 enabled = False
-host_name = KIT1-1
+host_name = KIT-HOST
 host_ip = 192.168.50.10
 share_name = SharedMeshDrive
 local_data_root = D:\SharedMeshDrive
