--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -40,3 +40,8 @@ working_fuser_host = KIT1-1
 
 [Paths]
 projects_root =
+
+[SharedDrive]
+preferred_mode = UNC
+drive_letter = M:
+auto_map_on_save = True
