--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -1,6 +1,6 @@
 [General]
 close_on_launch = False
-reality_mesh_local_root = D:\
+reality_mesh_local_root = 
 default_browser = C:/Users/tifte/AppData/Local/Programs/Opera GX/opera.exe
 vbs4_path = C:\Builds\VBS4\VBS4 YYMEA_General\VBS4.exe
 blueig_path = C:\Builds\BlueIG\Blue IG 24.2 YYMEA_General\BlueIG.exe
@@ -11,6 +11,7 @@ vbs_map_user = TIFTE
 vbs_map_server = localhost
 vbs_map_port = 4080
 fullscreen = True
+photomesh_wizard_exe = C:\Program Files\Skyline\PhotoMeshWizard\PhotoMeshWizard.exe
 
 [Auto-Launch]
 enabled = True
@@ -22,7 +23,7 @@ config_path = fuser_config.json
 local_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 remote_fuser_exe = C:\\Program Files\\Skyline\\PhotoMesh\\Fuser\\PhotoMeshFuser.exe
 fuser_computer = False
-working_folder_host = Kit1-1
+working_folder_host = KIT1-1
 
 [BiSimOneClickPath]
 path = C:\BiSim OneClick\Datasets\CACTF_BUILD_20250814_134554
@@ -30,18 +31,21 @@ path = C:\BiSim OneClick\Datasets\CACTF_BUILD_20250814_134554
 [Offline]
 enabled = False
 host_name = KIT1-1
-host_ip = 192.168.50.10
+host_ip = 
 share_name = SharedMeshDrive
 local_data_root = D:\SharedMeshDrive
 working_fuser_subdir = WorkingFuser
 use_ip_unc = False
 working_fuser_host = KIT1-1
 
-
 [Paths]
-projects_root =
+projects_root = //kit1-1/SharedMeshDrive/Projects
 
 [SharedDrive]
 preferred_mode = UNC
 drive_letter = M:
 auto_map_on_save = True
+
+[Network]
+host = KIT1-1
+
