Revert "Update PhotoMesh Wizard default path and bundle preset"
This reverts commit ad0e473240793eda898186cac41b5d8a12a196db.

--- a/PythonPorjects/config.ini
+++ b/PythonPorjects/config.ini
@@ -11,7 +11,7 @@ vbs_map_user = TIFTE
 vbs_map_server = localhost
 vbs_map_port = 4080
 fullscreen = True
-photomesh_wizard_exe = C:\Program Files\Skyline\PhotoMesh\Tools\PhotomeshWizard\PhotoMeshWizard.exe
+photomesh_wizard_exe = C:\Program Files\Skyline\PhotoMeshWizard\PhotoMeshWizard.exe
 
 [Auto-Launch]
 enabled = True
